# doxie

./: .dockerignore  .env.example  .pre-commit-config.yaml  Dockerfile  docker-compose.yml  pyproject.toml
config/: logging.yaml  settings.yaml
src/doxie/: __init__.py  config.py  exceptions.py
src/doxie/connectors/: __init__.py  base_connector.py  confluence.py  github.py  jira.py  scheduler.py
src/doxie/mcp/: __init__.py  server.py
src/doxie/mcp/sources/: __init__.py  base.py  confluence_source.py
src/doxie/mcp/tools/: __init__.py  confluence.py  github.py  jira.py  web_docs.py
src/doxie/parsers/: __init__.py  base_parser.py  html_parser.py  markdown_parser.py
src/doxie/search/: __init__.py  base_search.py  ephemeral.py
src/doxie/storage/: __init__.py  database.py  models.py
tests/: test_jira_connector.py  test_mcp_tools_confluence.py  test_mcp_tools_github.py  test_mcp_tools_jira.py
